Simplify validation